--- a/public/locales/de/blogs.json
+++ b/public/locales/de/blogs.json
@@ -2,5 +2,7 @@
   "readme": "Weiterlesen",
   "headline": "Von A wie AI bis Z wie Zukunft",
   "site": "Seite",
-  "pageTitle": "dorfstetter.at | Blogübersicht"
+  "pageTitle": "dorfstetter.at | Blogübersicht",
+  "home": "Startseite",
+  "crumbs-headline": "Meine Blogs"
 }
