--- a/public/locales/en/blogs.json
+++ b/public/locales/en/blogs.json
@@ -1,5 +1,6 @@
 {
   "readme": "Continue reading",
   "headline": "From a like ai to z like zip",
-  "site": "page"
+  "site": "page",
+  "crumbs-headline": "My blog"
 }
