--- a/public/locales/es/blogs.json
+++ b/public/locales/es/blogs.json
@@ -2,5 +2,6 @@
   "readme": "Más información",
   "headline": "De la a como ai a la z como zip",
   "site": "Página",
-  "pageTitle": "dorfstetter.at | Resumen del blog"
+  "pageTitle": "dorfstetter.at | Resumen del blog",
+  "crumbs-headline": "Mis blogs"
 }
